# CertificationDEVIA

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_INTELLIGENTE.md  CONTEXTE_PROJET.md  Dockerfile  README.md  TODO_CERTIFICATION.md  apply_agent_fix.py  backend.Dockerfile  cleanup_project.py  docker-compose.yml  dump.sql  fix_agent_prompt.py  fix_parser.py  frontend.Dockerfile  get_token.py  observability_readme.md  observability_scan.json  pyproject.toml  requirements.txt  start_services.py  start_services_new.py  structure.ipynb  test_analytics_data.py  test_fastapi_call.py  test_generator.py  test_rag_knowledge.py
.streamlit/: secrets.toml
E1_gestion_donnees/: README.md  data_manager.py  db_manager.py  init_db.py
E2_veille_IA/: README.md  benchmark_services_ia.md  plan_veille_technologique.md  sources_fiables.md  template_synthese_wcag.md
E3_model_IA/: api_service.py
E4_app_IA/: backlog_agile.csv
E5_monitoring/: INTEGRATION_DOCKER.md  MONITORING_E5.md  README_E5.md  docker-compose-monitoring.yml  requirements-monitoring.txt  sample_dashboard_data.json
Pour Antoine/: README.md
data/: agent_memory.sqlite  django_garmin_data.db  garmin_data.db  garmin_data_dump.sql  raw_garmin_data_20250319_144249.json  raw_garmin_data_20250320_151857.json  raw_garmin_data_20250414_155816.json  raw_garmin_data_20250414_160256.json  raw_garmin_data_20250415_094814.json  raw_garmin_data_20250416_162937.json  raw_garmin_data_20250514_111120.json  raw_garmin_data_20250515_095231.json  raw_garmin_data_20250708_104935.json  raw_garmin_data_20250708_105210.json  raw_garmin_data_20250708_105434.json  raw_garmin_data_20250708_110217.json  raw_garmin_data_20250708_112702.json  raw_garmin_data_20250708_113046.json  raw_garmin_data_20250708_114700.json  raw_garmin_data_20250708_115646.json  raw_garmin_data_20250803_193716.json  raw_garmin_data_20250804_104036.json  raw_garmin_data_20250804_104303.json  raw_garmin_data_20250804_104341.json  raw_garmin_data_20250804_104623.json  raw_garmin_data_20250807_094359.json  raw_garmin_data_20250807_094629.json  raw_garmin_data_20250807_094644.json  raw_garmin_data_20250824_115442.json  raw_garmin_data_20250825_110330.json  raw_garmin_data_20250825_110701.json  raw_garmin_data_20250825_110749.json  raw_garmin_data_20250825_111400.json  raw_garmin_data_20250825_111528.json  (+1 more)
(+291 files in other folders)
